--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,6 @@ android {
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     }
+
+    namespace 'com.pichillilorenzo.flutter_inappwebview'
 }
