--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,4 +51,7 @@ android {
         implementation 'com.squareup.okhttp3:okhttp:3.14.9'
         implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     }
+    
+    namespace 'com.pichillilorenzo.flutter_inappwebview'
+
 }
